Center align sheep image if no stops

--- a/src/dashboards/Entur/styles.scss
+++ b/src/dashboards/Entur/styles.scss
@@ -34,6 +34,10 @@
         display: none;
     }
 
+    .no-stops {
+        text-align: center;
+    }
+
     &:hover {
         .enturdash__footer {
             display: flex;
